--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "camera-controls": "^3.1.2",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.562.0",
     "matter-js": "^0.20.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4",
     "sass": "^1.97.1",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1",
